--- a/loginapp/app/src/main/res/layout/activity_upload.xml
+++ b/loginapp/app/src/main/res/layout/activity_upload.xml
@@ -17,12 +17,23 @@
         android:background="#039be5"/>
     <EditText
         android:id="@+id/et_label"
+        android:hint="Label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:textColor="#000"
         android:gravity="center"
         android:layout_below="@+id/ivAttachment"
+        android:layout_centerHorizontal="true"/>
+    <EditText
+        android:id="@+id/et_tags"
+        android:hint="Tags"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:textColor="#000"
+        android:gravity="center"
+        android:layout_below="@+id/et_label"
         android:layout_centerHorizontal="true"/>
     <TextView
         android:id="@+id/tv_file_name"
@@ -31,7 +42,7 @@
         android:textColor="#000"
         android:layout_marginTop="100dp"
         android:gravity="center"
-        android:layout_below="@+id/ivAttachment"
+        android:layout_below="@+id/et_label"
         android:layout_centerHorizontal="true"/>
 
 
